...
"editGame_Rating" = "Rating";
"editGame_Dev" = "Developer";
"editGame_Pub" = "Publisher";
"editGame_igdbID" = "IGDB ID";
"editGame_igdbIDDesc" = "The ID of the game found on igdb.com";
"editGame_Release" = "Release Date";
"editGame_SaveGame" = "Save Game";
"editGame_SelectGame" = "Select Game";
"editGame_Fetch" = "Fetch Metadata";
"editGame_NoGamesFailure" = "No games found";
"prefs_SonomaRequired" = "macOS 14 (Sonoma) is required for this feature.";
"prefs_General" = "General";
"general_SelectedFolder" = "Selected folder";
...
"context_Favorite" = "Favorite";
"context_Unfavorite" = "Unfavorite";
"context_Game" = "Game";
"context_Games" = "Games";
"context_FavoriteGame" = "Favorite game";
"context_HideGame" = "Hide game";
"context_DeleteGame" = "Delete game";
"context_EditGame" = "Edit game";
"context_EditName" = "Edit name";
"context_EditIcon" = "Edit icon";
"context_EditHeader" = "Edit header";
"context_EditPlatform" = "Edit platform";
"context_EditStatus" = "Edit status";
...
