...
                        // Add game button
                        Button(
                            action: {
                                self.isAddingGame.toggle()
                            },
                            label: {
                                Label("New Game", systemImage: "plus")
                            }
                        )
                        .sheet(
                            isPresented: $isAddingGame,
                            onDismiss: {
                                // Refresh game list
...
